--- a/starter/index.html
+++ b/starter/index.html
@@ -30,63 +30,63 @@
     </header>
     <div class="container">
       <div class="timeblock" data-hour="9">
-        <div class="time">09:00</div>
+        <div class="time9">09:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="10">
-        <div class="time">10:00</div>
+        <div class="time10">10:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="11">
-        <div class="time">11:00</div>
+        <div class="time11">11:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="12">
-        <div class="time">12:00</div>
+        <div class="time12">12:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="13">
-        <div class="time">13:00</div>
+        <div class="time13">13:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="14">
-        <div class="time">14:00</div>
+        <div class="time14">14:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="15">
-        <div class="time">15:00</div>
+        <div class="time15">15:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="16">
-        <div class="time">16:00</div>
+        <div class="time16">16:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="17">
-        <div class="time">17:00</div>
+        <div class="time17">17:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
