tried to start local storage bit, got nowhere. moved html to right location and fixed pathways.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./starter/assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,63 +30,63 @@
     </header>
     <div class="container">
       <div class="timeblock" data-hour="9">
-        <div class="time9">09:00</div>
+        <div class="time" id="time9">09:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="10">
-        <div class="time10">10:00</div>
+        <div class="time" id="time10">10:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="11">
-        <div class="time11">11:00</div>
+        <div class="time" id="time11">11:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="12">
-        <div class="time12">12:00</div>
+        <div class="time" id="time12">12:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="13">
-        <div class="time13">13:00</div>
+        <div class="time" id="time13">13:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="14">
-        <div class="time14">14:00</div>
+        <div class="time" id="time14">14:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="15">
-        <div class="time15">15:00</div>
+        <div class="time" id="time15">15:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="16">
-        <div class="time16">16:00</div>
+        <div class="time" id="time16">16:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
         </div>
       </div>
       <div class="timeblock" data-hour="17">
-        <div class="time17">17:00</div>
+        <div class="time" id="time17">17:00</div>
         <textarea name="taskInput" id="input" cols="80" rows="3"></textarea>
         <div class="saveBtn">
           <i class="fas fa-save fa-2x"></i>
@@ -98,6 +98,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./starter/assets/js/script.js"></script>
   </body>
 </html>
